tests/sumo/extended/calibrator/errors/vClass_mismatch_ignore/tripinfos.sumo.ballistic
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Wed Apr  3 11:02:53 2019 by Eclipse SUMO Version v1_1_0+0417-c407ef5
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
SPDX-License-Identifier: EPL-2.0
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <additional-files value="input_additional.add.xml"/>
    </input>

    <output>
        <write-license value="true"/>
        <tripinfo-output value="tripinfos.xml"/>
    </output>

    <time>
        <end value="100"/>
    </time>

    <processing>
        <step-method.ballistic value="true"/>
        <ignore-route-errors value="true"/>
        <default.speeddev value="0"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<tripinfos xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/tripinfo_file.xsd">
    <tripinfo id="cali.0.0" depart="8.00" departLane="middle_0" departPos="5.10" departSpeed="13.89" departDelay="0.00" arrival="23.00" arrivalLane="end_0" arrivalPos="100.00" arrivalSpeed="13.27" duration="15.00" routeLength="294.90" waitingTime="0.00" waitingCount="0" stopTime="0.00" timeLoss="0.73" rerouteNo="0" devices="tripinfo_cali.0.0" vType="DEFAULT_VEHTYPE" speedFactor="1.00" vaporized=""/>
    <tripinfo id="cali.0.1" depart="10.00" departLane="middle_0" departPos="5.10" departSpeed="13.89" departDelay="0.00" arrival="25.00" arrivalLane="end_0" arrivalPos="100.00" arrivalSpeed="13.19" duration="15.00" routeLength="294.90" waitingTime="0.00" waitingCount="0" stopTime="0.00" timeLoss="0.78" rerouteNo="0" devices="tripinfo_cali.0.1" vType="DEFAULT_VEHTYPE" speedFactor="1.00" vaporized=""/>
    <tripinfo id="cali.0.2" depart="13.00" departLane="middle_0" departPos="5.10" departSpeed="13.89" departDelay="0.00" arrival="28.00" arrivalLane="end_0" arrivalPos="100.00" arrivalSpeed="13.35" duration="15.00" routeLength="294.90" waitingTime="0.00" waitingCount="0" stopTime="0.00" timeLoss="0.86" rerouteNo="0" devices="tripinfo_cali.0.2" vType="DEFAULT_VEHTYPE" speedFactor="1.00" vaporized=""/>
    <tripinfo id="cali.0.3" depart="19.00" departLane="middle_0" departPos="5.10" departSpeed="13.89" departDelay="0.00" arrival="34.00" arrivalLane="end_0" arrivalPos="100.00" arrivalSpeed="13.83" duration="15.00" routeLength="294.90" waitingTime="0.00" waitingCount="0" stopTime="0.00" timeLoss="0.71" rerouteNo="0" devices="tripinfo_cali.0.3" vType="DEFAULT_VEHTYPE" speedFactor="1.00" vaporized=""/>
</tripinfos>
